--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,8 @@ ul {
             font-size: 18px;
 		}
 
-#band-image {
+/* #band-image {
     width: 200px; /* Adjust image size */ 
-    display: block;
+    /* display: block;
     margin: 0 auto 20px auto; /* Center the image */
-}
+/*} */
